--- a/sass/material-kit/_buttons.scss
+++ b/sass/material-kit/_buttons.scss
@@ -28,7 +28,7 @@
         &:focus,
         &:hover{
             background-color: $gray-ultra-light;
-            color: $gray-light;
+            color: $gray;
         }
         &.btn-simple{
             color: #FFFFFF;
