--- a/sass/material-kit/_cards.scss
+++ b/sass/material-kit/_cards.scss
@@ -115,7 +115,7 @@
 
     .header-primary,
     .content-primary{
-        background: linear-gradient(60deg, $purple-400, $purple-700);
+        background: linear-gradient(60deg, $deep-orange-400, $deep-orange-700);
     }
     .header-info,
     .content-info{
