Update SASS styles

--- a/sass/material-kit.scss
+++ b/sass/material-kit.scss
@@ -7,7 +7,7 @@
  * Copyright 2017 Jolly Joker (https://jollyjoker.co)
  *
  * ========================================================= */
-@import 'bootstrap.min.css';
+@import 'bootstrap.min';
 @import 'material-kit/variables';
 @import 'material-kit/mixins';
 @import 'material-kit/shadows';
