Add Files of admin

--- a/admin/sass/material-dashboard.scss
+++ b/admin/sass/material-dashboard.scss
@@ -34,7 +34,7 @@
 
 
 
-
+@import "bootstrap.min";
 //variables and mixins
 @import "material-dashboard/variables";
 @import "material-dashboard/mixins";
