--- a/admin/sass/material-dashboard.scss
+++ b/admin/sass/material-dashboard.scss
@@ -36,7 +36,7 @@
 
 
 //variables and mixins
-@import "bootstrap.min";
+//@import "bootstrap.min";
 @import "material-dashboard/variables";
 @import "material-dashboard/mixins";
 @import "material-dashboard/shadows";
