--- a/sass/material-kit/_misc.scss
+++ b/sass/material-kit/_misc.scss
@@ -1,4 +1,4 @@
-body {
+app-root {
   background-color: #eee;
   color: $black-color;
   &.inverse {
@@ -33,7 +33,7 @@ blockquote{
     background: #FFFFFF;
 }
 
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+app-root, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
   font-family: $font-family-sans-serif;
   font-weight: 300;
   line-height: 1.5em;
