--- a/sass/material-kit/_typography.scss
+++ b/sass/material-kit/_typography.scss
@@ -1,4 +1,4 @@
-body{
+app-root{
     font-size: $font-size-base;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
