--- a/admin/sass/material-dashboard/_misc.scss
+++ b/admin/sass/material-dashboard/_misc.scss
@@ -1,4 +1,4 @@
-body {
+app-root {
   background-color: #EEEEEE;
   // background: #fdfdfe;
   color: $black-color;
@@ -39,7 +39,7 @@ blockquote{
     background: #FFFFFF;
 }
 
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+app-root, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
   font-family: $font-family-sans-serif;
   font-weight: 300;
   line-height: 1.5em;
