--- a/sass/material-kit/pages/_product.scss
+++ b/sass/material-kit/pages/_product.scss
@@ -1,4 +1,4 @@
-.product{
+&.product{
     background-color: #eee;
 
     .navbar{
@@ -330,7 +330,7 @@
 
 
 @media (max-width: $screen-sm-max){
-    .product{
+    &.product{
         .navbar{
             .navbar-toggle{
                 display: none !important;
