--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -92,7 +92,7 @@
         margin: 10px 0;
 
         .ProductPicker{
-            margin: 5px 10px;
+            margin: 5px 15px;
 
             .card-image{
                 .colored-shadow{
@@ -115,7 +115,8 @@
                     font-weight: $font-weight-default;
                 }
             }
-
+            width: 100px !important;
+            height: 155px !important;
             &.active{
                 box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
             }
@@ -241,13 +242,14 @@
 
     /* --- <PRODUCT PANEL --- */
     .view-front{
+        width: 615px;
+        height: 615px;
         position: relative;
-
         .design-area{
-            height: 60%;
-            width: 42%;
-            left: 29%;
-            top: 28.5%;
+            height: 390px;
+            width: 280px;
+            left: 28%;
+            top: 26.5%;
             border: 2px dashed rgba(0,0,0,0.2);
             position: absolute;
             overflow: hidden;
@@ -289,13 +291,15 @@
     }
 
     .view-back{
+        width: 615px;
+        height: 615px;
         position: relative;
 
         .design-area{
-            height: 60%;
-            width: 42%;
-            left: 29%;
-            top: 28.5%;
+            height: 390px;
+            width: 280px;
+            left: 28%;
+            top: 15.5%;
             border: 2px dashed rgba(0,0,0,0.2);
             position: absolute;
             overflow: hidden;
