--- a/sass/material-kit.scss
+++ b/sass/material-kit.scss
@@ -69,4 +69,6 @@
 @import 'material-kit/pages/register';
 @import 'material-kit/pages/designer';
 
+@import 'material-kit/cart';
+
 @import 'material-kit/responsive';
