--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -246,8 +246,8 @@
 
     #SVGFront, #SVGBack, #SVGFrontS3, #SVGFront{
         svg {
-            width: 100%;
-            height: 100%;
+            //width: 100%;
+            //height: 100%;
         }
     }
 
@@ -258,6 +258,15 @@
         // width: 615px;
         // height: 615px;
         position: relative;
+        .design-print{
+            height: 60%;
+            width: 42%;
+            left: 0;
+            right: 0;
+            margin: auto;
+            top: 27.5%;
+            position: absolute;  
+        }
         .design-area{
             height: 100%;
             width: 100%;
