--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -658,6 +658,7 @@
         .list-colors{
             .bg-colors{
                 display: inline-block;
+                margin: 1.2px;
                 width: 25px;
                 height: 25px;
                 border-radius: 25px;
