Update last pages

--- a/sass/material-kit.scss
+++ b/sass/material-kit.scss
@@ -69,6 +69,10 @@
 @import 'material-kit/pages/register';
 @import 'material-kit/pages/designer';
 
+@import 'material-kit/pages/info-pages';
+@import 'material-kit/pages/order-tracking';
+@import 'material-kit/pages/page-not-found';
+
 @import 'material-kit/cart';
 
 @import 'material-kit/responsive';
