Update mateo changes

--- a/sass/material-kit/pages/_info-pages.scss
+++ b/sass/material-kit/pages/_info-pages.scss
@@ -1,8 +1,8 @@
-.info-pages{
+&.info-pages{
     .page-header{
         &.header-small{
-            height: 45vh;
-            min-height: 45vh;
+            height: 50vh;
+            min-height: 50vh;
         }
 
         .title{
