Update sass shop

--- a/sass/material-kit/pages/_shop.scss
+++ b/sass/material-kit/pages/_shop.scss
@@ -82,7 +82,13 @@
             }
         }
     }
-
+    .edit-bg{
+       position: absolute;
+       bottom: 0;
+       left: 0;
+       background-color: rgba(255, 255, 255, 0.3);
+       color: #fff;
+    }
     .shop-content{
         padding-top: 40px;
     }
