Update styles designer

--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -97,7 +97,7 @@
 
         .ProductPicker{
             margin: 5px 15px;
-
+            height: 165px;
             .card-image{
                 .colored-shadow{
                     opacity: 0 !important;
