--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -91,7 +91,45 @@
             }
         }
     }
+    .ProductPickerDropdown{
+        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+        .ProductPickerList{
+            width: 100%;
+            height: 280px;
+            overflow-x: hidden;
+            overflow-y: scroll;
+            padding:10px 5px;
+            list-style: none;
+            li>a{
+                padding:5px 5px;
+                font-size: 13px;
+                margin: 0 5px;
+                border-radius: 2px;
+                transition: all .15s linear;
+                display: block;
+                font-weight: 400;
+                color: #333;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                &.active{
+                    background-color: #ff7043;
+                    color: #fff;
+                    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14), 0 7px 10px -5px rgba(255,112,67,.4);
+                }
+                &:hover{
+                    background-color: #ff7043;
+                    color: #fff;
+                    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14), 0 7px 10px -5px rgba(255,112,67,.4);
 
+                }
+            }
+            img{
+                width:50px;
+                height:50px;
+            }
+        }
+    }
     .sliderProductPicker{
         margin: 10px 0;
 
