--- a/sass/material-kit/pages/_shop.scss
+++ b/sass/material-kit/pages/_shop.scss
@@ -110,6 +110,9 @@
         }
 
         .panel-heading{
+            h4{
+                color: #3C4858;   
+            }
             i{
                 float:none;
             }
