--- a/sass/material-kit/pages/_page-not-found.scss
+++ b/sass/material-kit/pages/_page-not-found.scss
@@ -64,7 +64,7 @@
         height: 100%;
         z-index: -1;
         transform: scale(1.1);
-        background: url('/assets/img/404-bg.jpg');
+        background: url('/assets/404-bg.jpg');
         background-size: cover;
     }
 }
