--- a/admin/sass/material-dashboard/_admin-toolbar.scss
+++ b/admin/sass/material-dashboard/_admin-toolbar.scss
@@ -198,7 +198,7 @@
     }
 }
 
-#marketingShareModal{
+.marketingShareModal{
     .services-container{
         display: inline-block;
         width: 90%;
@@ -552,7 +552,7 @@
         }
     }
 
-    #marketingShareModal{
+    .marketingShareModal{
         .services-container{
             width: 100%;
 
