--- a/sass/material-kit/_admin-toolbar.scss
+++ b/sass/material-kit/_admin-toolbar.scss
@@ -197,8 +197,7 @@
         }
     }
 }
-
-#marketingShareModal{
+.marketingShareModal{
     .services-container{
         display: inline-block;
         width: 90%;
@@ -552,7 +551,7 @@
         }
     }
 
-    #marketingShareModal{
+    .marketingShareModal{
         .services-container{
             width: 100%;
 
