Update styles mateo

--- a/sass/material-kit/_admin-toolbar.scss
+++ b/sass/material-kit/_admin-toolbar.scss
@@ -62,7 +62,8 @@
         border-radius: 0;
         box-shadow: none;
         background-color: #666e75;
-
+        border-bottom:0;
+        
         .admin-navbar{
             display: table;
             width: calc(100% - 28px);
