--- a/sass/material-kit/pages/_page-not-found.scss
+++ b/sass/material-kit/pages/_page-not-found.scss
@@ -14,10 +14,10 @@
 
     .content{
         text-align: center;
-
+        margin-top: 60px;
         header{
             position: absolute;
-            top: 10%;
+            top: 20%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
