--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -11,7 +11,7 @@
         .main-container{
             z-index: 2;
             position: relative;
-            padding-top: 6.5vh;
+            padding-top: 65px;
             height: 100%;
             display: flex;
             flex-direction: column;
