--- a/sass/material-kit/pages/_shop.scss
+++ b/sass/material-kit/pages/_shop.scss
@@ -77,14 +77,14 @@
 
             .cart-btn{
                 position: absolute;
-                bottom: 0;
+                bottom: -14px;
                 right: 0;
             }
         }
     }
     .edit-bg{
        position: absolute;
-       bottom: 0;
+       bottom: -14px;
        left: 0;
        background-color: rgba(255, 255, 255, 0.3);
        color: #fff;
