--- a/admin/sass/material-dashboard/_cards.scss
+++ b/admin/sass/material-dashboard/_cards.scss
@@ -125,6 +125,8 @@
                 height: 33px;
                 text-align: center;
                 line-height: 33px;
+                display:block;
+                font-size: 33px;
             }
         }
 
