--- a/sass/material-kit/pages/_designer.scss
+++ b/sass/material-kit/pages/_designer.scss
@@ -1,5 +1,11 @@
 &.designer{
     /* --- <HEADER AND NAVBAR --- */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     .navbar-transparent{
         padding-top: 25px;
     }
