Add edit product styles

--- a/admin/sass/material-dashboard.scss
+++ b/admin/sass/material-dashboard.scss
@@ -87,6 +87,7 @@
 @import "material-dashboard/pages/sales";
 @import "material-dashboard/pages/earnings";
 @import "material-dashboard/pages/products";
+@import "material-dashboard/pages/edit-product";
 
 // Fancy Stuff
 @import "material-dashboard/dropdown";
