Full screen styles

--- a/sass/material-kit.scss
+++ b/sass/material-kit.scss
@@ -75,6 +75,8 @@
 
 @import 'material-kit/cart';
 
-@import 'material-kit/responsive';
-
 @import 'material-kit/admin-toolbar';
+
+@import 'material-kit/full-screen-loader';
+
+@import 'material-kit/responsive';
