--- a/sass/material-kit/pages/_page-not-found.scss
+++ b/sass/material-kit/pages/_page-not-found.scss
@@ -63,8 +63,7 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        transform: scale(1.1);
-        background: url('/assets/404-bg.jpg');
-        background-size: cover;
+        background-size: inherit;
+        background-position: center center;
     }
 }
