--- a/admin/sass/material-dashboard/_dialogs.scss
+++ b/admin/sass/material-dashboard/_dialogs.scss
@@ -92,7 +92,7 @@
 
 .modal{
     .modal-dialog{
-        margin-top: 100px;
+        //margin-top: 100px;
     }
     .modal-header .close{
         color: $gray-light;
