--- a/sass/material-kit/_dialogs.scss
+++ b/sass/material-kit/_dialogs.scss
@@ -96,7 +96,7 @@
 
 .modal{
     .modal-dialog{
-        margin-top: 100px;
+        //margin-top: 100px;
 
         &.modal-login{
             width: 360px;
